examples/datalog/15_arithmetic/18_chained_operations.dl
% Test: Chained arithmetic operations
% Expected: Correct evaluation with proper precedence
% Category: 15_arithmetic
% Priority: P1 - Arithmetic correctness

.kg create test_chained
.kg use test_chained

+values[(10,), (20,), (30,)].

% Chained addition: X + 1 + 2 + 3
result_add(X, Y) :- values(X), Y = X + 1 + 2 + 3.
?- result_add(X, Y).

% Chained subtraction: X - 5 - 3
result_sub(X, Y) :- values(X), Y = X - 5 - 3.
?- result_sub(X, Y).

% Mixed operations: X + 10 - 5 + 2
result_mixed(X, Y) :- values(X), Y = X + 10 - 5 + 2.
?- result_mixed(X, Y).

% Multiplication chain: X * 2 * 3
result_mul(X, Y) :- values(X), Y = X * 2 * 3.
?- result_mul(X, Y).

.kg use default
.kg drop test_chained
